--- a/package.json
+++ b/package.json
@@ -9,29 +9,21 @@
   "scripts": {
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "validate": "echo 'project validation disabled'"
+    "kw-scripts": "./node_modules/.bin/kw-scripts",
+    "lint": "eslint . --ignore-path .gitignore",
+    "test": "echo 'No tests available'",
+    "validate": "yarn lint"
   },
   "dependencies": {},
   "devDependencies": {
     "all-contributors-cli": "^6.1.2",
     "doctoc": "^1.4.0",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    ".all-contributorsrc": [
-      "yarn contributors:generate"
-    ],
-    "**/*.md": [
-      "doctoc",
-      "prettier --write",
-      "git add"
-    ]
   }
 }
