--- a/packages/kw-scripts/package.json
+++ b/packages/kw-scripts/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^2.19.0",
-    "lodash.sortby": "^4.7.0"
+    "lodash.sortby": "^4.7.0",
+    "node-plop": "^0.18.0",
+    "ora": "^3.2.0"
   },
   "devDependencies": {}
 }
