--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.0",
+  "version": "0.1.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "command": {
@@ -7,7 +7,9 @@
       "allowBranch": "master",
       "conventionalCommits": true,
       "githubRelease": true,
-      "ignoreChanges": ["!packages/**"],
+      "ignoreChanges": [
+        "!packages/**"
+      ],
       "message": "chore(release): release %s 🚀 [skip ci]"
     }
   }
